# gimmedat

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust-clippy.yml  rust.yml
src/: capability.rs  crypto.rs  data.rs  main.rs  templates.rs  web.rs
src/web/: api.rs  mod.rs  ui.rs
templates/: browse.html.j2  custom.css  error.html.j2  gen.html.j2  gen_res.html.j2  index.html.j2  layout.html.j2  style.css  upload.html.j2  upload.js.j2  upload_help.html.j2  upload_response.txt.j2
