[package]
name = "gimmedat"
version = "1.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-argon2 = "1.0"
askama = { version = "0.12", features = ["with-tide"] }
askama_tide = "0.15"
async-std = "1.12.0"
chacha20poly1305 = "0.10"
clap = { version = "4.3.5", features = ["derive"] }
serde = "1.0.164"
tide = "0.16.0"
serde_urlencoded = "0.7.1"
base64 = "0.21"
serde_derive = "1.0.164"
rand = { version = "0.8.5", features = ["getrandom"] }
rand_core = "0.6.3"
log = { version = "0.4.17", features = ["std", "serde"] }
