[package]
name = "gimmedat"
version = "1.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-argon2 = "1.0"
askama = { version = "0.12" }
async-std = "1.12.0"
chacha20poly1305 = "0.10"
clap = { version = "4.3.5", features = ["derive"] }
serde = "1.0.164"
base64 = "0.21"
serde_derive = "1.0.164"
rand = { version = "0.8.5", features = ["getrandom"] }
rand_core = "0.6.3"
anyhow = "1.0.72"
axum = { version = "0.6.20", features = ["headers", "tracing"] }
askama_axum = "0.3.0"
bytes = { version = "1.4.0", features = ["std"] }
tokio = { version = "1.29.1", features = ["full"] }
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
tower-http = { version = "0.4.3", features = ["trace"] }
axum-extra = "0.7.7"
tower = "0.4.13"
http-body = "0.4.5"
nanoid = "0.4.0"
ciborium = "0.2.1"
async-trait = "0.1.73"
futures-lite = "1.13.0"
tokio-util = { version = "0.7.8", features = ["io"] }
format-bytes = "0.3.0"
urlencoding = "2.1.3"
